# Minimal-Project

./: CMakeLists.txt  main.cpp
include/: sum.hpp
src/: sum.cpp
test/: sumTest.cpp
